src/objects/Treatment_CRF_Report_Table_2__c.object
<CustomObject>
    <fields>
        <fullName>Chemo_Summary_Approved__c</fullName>
        <label>Chemo Summary Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chemo_Summary_Submitted__c</fullName>
        <label>Chemo Summary Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Approved__c</fullName>
        <label>Follow Up Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Submitted__c</fullName>
        <label>Follow Up Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_To_Follow_Up_Approved__c</fullName>
        <label>Lost To Follow Up Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_To_Follow_Up_Submitted__c</fullName>
        <label>Lost To Follow Up Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Longer_Lost_F_U_Approved__c</fullName>
        <label>No Longer Lost F/U Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Longer_Lost_F_U_Submitted__c</fullName>
        <label>No Longer Lost F/U Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Treatment CRF Report Table 2</relationshipLabel>
        <relationshipName>Treatment_CRF_Report_Table_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Eval_Inter_Reg_Approved__c</fullName>
        <label>Response Eval Inter Reg Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Eval_Inter_Reg_Submitted__c</fullName>
        <label>Response Eval Inter Reg Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Eval_Pre_Surg_Approved__c</fullName>
        <label>Response Eval Pre Surg Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Eval_Pre_Surg_Submitted__c</fullName>
        <label>Response Eval Pre Surg Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <label>Trial Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Treatment CRF Report Table 2</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment CRF Report Table 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>